--- a/app/views/companies/index.html.slim
+++ b/app/views/companies/index.html.slim
@@ -6,17 +6,13 @@
     });
 
 #company-index.container-index v-cloak="true"
-  = index_header Company, new_company_path
+  .d-flex.justify-content-between.align-items-center.mb-3
+    h4.mb-0.text-dark Filiais
+    = link_to '+ Nova filial', new_company_path, class: 'btn btn-orange-pill btn-sm shadow-sm'
 
-  = form_with url: companies_path, method: :get, local: true do |f|
-    .row.mb-3
-      .col-md-4
-        = f.label :name, 'Nome'
-        = f.text_field :name, class: 'form-control'
-      .col-md-4.mt-auto
-        = f.submit 'Buscar', class: 'btn btn-orange mt-4'
 
-  p v-if="filtersEnabled" class="text-info mt-2" Filtros ativados!
-  button.btn.btn-outline-secondary.mb-3 @click="toggleFilters" Alternar filtros
+  .filter-wrapper.shadow-sm.bg-white.rounded.p-3.mb-4
+    = render partial: 'companies/filters'
 
-= paginated_table @companies, headers: company_index_headers, fields: company_index_fields, actions: company_index_actions
+= modern_paginated_table(@companies, headers: ['Nome', 'Email', 'CNPJ'], fields: [:name, :email, :cnpj], actions: company_index_actions)
+
