--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -23,15 +23,16 @@ nav.navbar.navbar-expand-lg.navbar-custom
             ul.dropdown-menu(aria-labelledby="cadastrosDropdown")
               - if current_user.is_legal_person
                 li = link_to "Filiais", companies_path, class: "dropdown-item"
+                li = link_to "Concessionárias", energy_companies_path, class: "dropdown-item"
               - else
                 li = link_to "Meus Dados", individuals_path, class: "dropdown-item"
-
+                li = link_to "Concessionárias", energy_companies_path, class: "dropdown-item"
 
         li.nav-item.disabled
           span.nav-link.text-white.opacity-75 &VerticalBar;
 
         li.nav-item
-          = link_to "Fontes de Energia", energies_path, class: "nav-link"
+          = link_to "SolarIA", assistente_path, class: "nav-link"
 
         li.nav-item.disabled
           span.nav-link.text-white.opacity-75 &VerticalBar;
